@@ -5,6 +5,7 @@ ZEsarUX 12.1 - xxx edition. 22 Enero 2025
 
 Permitir grabar pantalla de ZX80/81 a archivo .scr
 Agregada conversión de archivos ZX81 P a P81, y P81 a P
+Permitir grabar una nota de texto en un snapshot ZSF
 
 Mejorado ZX Vision:
 - Permitir ocultar ventanas minimizadas
